# Nimerica

./: Cargo.toml  README.md
src/: lib.rs
src/tensor/: data.rs  impls.rs  mod.rs  slice.rs  tensor.rs  traits.rs  view.rs
src/traits/: algebra.rs  mod.rs  tensor.rs
src/utils/: errors.rs  logging.rs  mod.rs
